zope.testing Changelog
**********************

3.7.4 (unreleased)
==================

- Filenames of doctest examples now contain the line number and not
  only the example number. So a stack trace in pdb tells the exact
  line number of the current example. This fixes
  https://bugs.launchpad.net/bugs/339813


3.7.3 (2009-04-22)
==================

- Better deal with rogue threads by always exiting with status so even
  spinning daemon threads won't block the runner from exiting. This deprecated
  the ``--with-exit-status`` option.


3.7.2 (2009-04-13)
==================

- fix test failure on Python 2.4 because of slight difference in the way
  coverage is reported (__init__ files with only a single comment line are now
  not reported)
- fixed bug that caused the test runner to hang when running subprocesses (as a
  result Python 2.3 is no longer supported).
- there is apparently a bug in Python 2.6 (related to
  http://bugs.python.org/issue1303673) that causes the profile tests to fail.
- added explanitory notes to buildout.cfg about how to run the tests with
  multiple versions of Python


3.7.1 (2008-10-17)
==================

- The setupstack temporary-directory support now properly handles
  read-only files by making them writable before removing them.


3.7.0 (2008-09-22)
==================

- Added an alterate setuptools / distutils commands for running all tests
  using our testrunner.  See 'zope.testing.testrunner.eggsupport:ftest'.

- Added a setuptools-compatible test loader which skips tests with layers:
  the testrunner used by 'setup.py test' doesn't know about them, and those
  tests then fail.  See 'zope.testing.testrunner.eggsupport:SkipLayers'.

- Added support for Jython, when a garbage collector call is sent.

- Added support to bootstrap on Jython.

- Fixed NameError in StartUpFailure.

- Open doctest files in universal mode, so that packages released in Windoes
  can be tested in Linux, for example.


3.6.0 (2008/07/10)
==================
